# django-ai-chat

./: MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: integration.yml
src/django_ai_chat/: __init__.py  models.py  urls.py  views.py
src/django_ai_chat/migrations/: 0001_initial.py  0002_appvar.py  0003_auto_20230829_0426.py  0004_message_role.py
src/django_ai_chat/templates/django-ai-chat/: index-alt.html  index.html
src/django_ai_chat/templatetags/: django_ai_chat_extras.py
tests/: test_django_ai_chat.py
tests/www/: settings.py  urls.py
